Controller can now record video