@@ -1,12 +1,25 @@
 package net.acomputerdog.picam;
 
+import net.acomputerdog.picam.file.VideoFile;
+
+import java.io.Closeable;
 import java.io.IOException;
+import java.io.InputStream;
+import java.io.OutputStream;
 
 public class Camera {
     private final PiCamController controller;
     private final int cameraNumber;
 
     private boolean recording = false;
+    private long recordStart = 0;
+
+    private VideoFile recordFile;
+    private Thread recordThread;
+    private Process recordProcess;
+
+    private InputStream recordIn;
+    private OutputStream recordOut;
 
     public Camera(PiCamController controller, int cameraNumber) {
         this.controller = controller;
@@ -18,26 +31,107 @@ public class Camera {
     }
 
     public boolean isRecording() {
-        return recording;
+        return recording && recordProcess != null && recordProcess.isAlive();
     }
 
-    public void recordFor(int time) {
-        recording = true;
+    public void recordFor(int time, VideoFile videoFile) {
+        if (recording) {
+            System.out.println("Already recording");
+        } else {
+            recording = true;
+            recordStart = System.currentTimeMillis();
+            this.recordFile = videoFile;
 
-        try {
-            Runtime.getRuntime().exec("xterm");
-            //TODO run real command
-        } catch (IOException e) {
-            throw new RuntimeException("Exception running record command", e);
+            ProcessBuilder processBuilder = new ProcessBuilder();
+            processBuilder.command("raspivid", "-o", "-", "-w", "1920", "-h", "1080", "-md", "1", "-b", "0", "-t", String.valueOf(time), "-fps", "30", "-g", "150", "-ex", "antishake", "-awb", "fluorescent", "-drc", "med", "-qp", "0", "-n");
+            processBuilder.redirectOutput(ProcessBuilder.Redirect.PIPE);
+            processBuilder.redirectError(ProcessBuilder.Redirect.INHERIT);
+
+            recordThread = new Thread(() -> {
+                try {
+                    byte[] buff = new byte[512];
+                    while (recording) {
+                        if (!recordProcess.isAlive()) {
+                            recording = false;
+                        } else {
+                            // copy some of the file
+                            int count = recordIn.read(buff);
+
+                            if (count == -1) {
+                                // end of file
+                                stop();
+                                break;
+                            }
+
+                            recordOut.write(buff, 0, count);
+                        }
+                    }
+                    System.out.print("Flushing buffers...");
+                    flushBuffers(recordIn, recordOut);
+                    System.out.println("done.");
+                } catch (IOException e) {
+                    System.err.println("IO error while recording");
+                    e.printStackTrace();
+                    close(recordIn);
+                    close(recordOut);
+                    stop();
+                }
+            });
+            recordThread.setName("record_thread");
+            recordThread.setDaemon(false);
+
+
+            try {
+                recordProcess = processBuilder.start();
+
+                recordOut = recordFile.getOutStream();
+                recordIn = recordProcess.getInputStream();
+
+                recordThread.start();
+            } catch (IOException e) {
+                close(recordOut);
+                close(recordIn);
+                throw new RuntimeException("Exception running record command", e);
+            }
         }
     }
 
     public void stop() {
+        recordProcess.destroy();
+        recording = false;
+    }
+
+    public long getRecordingTime() {
+        return System.currentTimeMillis() - recordStart;
+    }
+
+    private static void flushBuffers(InputStream in, OutputStream out) throws IOException {
         try {
-            Runtime.getRuntime().exec(new String[]{"killall", "xterm"});
-            recording = false;
-        } catch (IOException e) {
-            throw new RuntimeException("Exception stopping recording", e);
+            byte[] buff = new byte[64];
+            while (in.available() > 0) {
+                int count = in.read(buff);
+                out.write(buff, 0, count);
+            }
+        } catch (IOException ignored) {
+            // read stream may already be opened
+        } finally {
+            try {
+                out.flush();
+            } catch (IOException ignored) {
+                // out stream may already be closed
+            }
+            close(in);
+            close(out);
+        }
+    }
+
+    private static void close(Closeable closeable) {
+        if (closeable != null) {
+            try {
+                closeable.close();
+            } catch (Exception ignored) {
+
+            }
         }
     }
 }
